@@ -2,6 +2,7 @@ V.Next
 ----------
 - [MINOR] Format thread+correlationId metadata only once logging is clearly opted-in (#1917)
 - [MINOR] Remove unnecessary synchronization when storage access is already guarded (#1928)
+- [MINOR] Write back read successes to cache and stop extra lookups in getAll #1927
 
 V.9.1.0
 ----------
